fix alignment of summernote in create page

--- a/static/styles.css
+++ b/static/styles.css
@@ -112,8 +112,7 @@ a {
 #submitl:hover,
 #submitr:hover,
 #login:hover,
-#register:hover,
-#controller button:hover {
+#register:hover {
     background-color: white;
     color: #212121;
 }
@@ -121,9 +120,13 @@ a {
 
 
 /* CRUD page */
-#controller .col-3,
-#controller .col-9 {
+#leftpanel,
+#rightpanel {
     min-height: 800px;
+}
+
+#leftpanel a:hover {
+    border-bottom: gold 2px solid;
 }
 
 /* profile picture */
@@ -135,16 +138,16 @@ a {
     margin: 20px auto;
 }
 
-#controller .col-3 {
+#leftpanel {
     background-color: #212121;
     color: white;
 }
 
-#controller .col-3 h4 {
+#leftpanel h4 {
     text-align: center;
 }
 
-#controller .col-3 .mt-3 a {
+#leftpanel .mt-3 a {
     margin: 0px 40px;
     transition: 0.3s ease-in-out;
 }
@@ -154,17 +157,39 @@ a {
     text-align: center;
 }
 
-#controller button,
-#searchbtn {
-    border: none;
-    border-radius: 10px;
-    font-weight: bold;
-    background-color: gold;
-    padding: 5px 10px;
-    transition: 0.4s ease-in-out;
+/* create note */
+#Cpanel form {
+    margin: 10px auto;
 }
 
-#searchbtn:hover {
-    background-color: #212121;
-    color: white;
+.note-editor {
+    border: #212121 5px solid !important;
+    border-radius: 10px !important;
+    margin: 20px auto;
 }
+.note-toolbar {
+    border-bottom: #212121 5px solid !important;
+    border-radius: 10px 10px 0 0;
+    /* background-color: #212121 !important; */
+}
+
+#submitnotebtn, #leftpanel button,
+#searchbtn  {
+    margin: 10px auto;
+    border: none;
+    background-color:  gold;
+    padding: 5px 10px;
+    font-weight: bold;
+    border-radius: 10px;
+    transform: translateY(0);
+    transition: 0.6s ease-in-out;
+}
+
+#submitnotebtn {
+    display: block;
+}
+
+#searchbtn:hover, #leftpanel button:hover, #submitnotebtn:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 0px 1px orange;
+} 
